third_party/move/move-compiler-v2/tests/bytecode-generator/wildcard8.move
module 0xc0ffee::m {
    public fun test() {
        let x: u64;
        let (_, _) = (x, x);
    }
}
